infrastructure/vm/kubernetes/etcd-metrics.yaml
# Works thanks to the default prometheus rules
apiVersion: v1
kind: Service
metadata:
  name: etcd-metrics
  namespace: kube-system
  labels:
    app: kube-prometheus-stack-kube-etcd
    release: prometheus
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 2381
    targetPort: 2381
---
apiVersion: v1
kind: Endpoints
metadata:
  name: etcd-metrics
  namespace: kube-system
subsets:
  - addresses:
      - ip: 10.0.1.158  
      - ip: 10.0.1.143 
      - ip: 10.0.1.190
    ports:
      - name: http-metrics
        port: 2381
