infrastructure/vm/kubernetes/whoami.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: whoami
#   labels:
#     app: whoami
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: whoami
#   template:
#     metadata:
#       labels:
#         app: whoami
#     spec:
#       containers:
#         - name: whoami
#           image: traefik/whoami
#           ports:
#             - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami
#   labels:
#     app: whoami
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 80
#   selector:
#     app: whoami
# # ---
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   name: whoami-ingress
# # spec:
# #   ingressClassName: traefik
# #   rules:
# #     - host: whoami.aimericsorin
# #       http:
# #         paths:
# #           - path: /
# #             pathType: Prefix
# #             backend:
# #               service:
# #                 name: whoami
# #                 port:
# #                   number: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  annotations:
    oci-network-load-balancer.oraclecloud.com/security-list-management-mode: "All"
    oci.oraclecloud.com/load-balancer-type: nlb
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
