infrastructure/vm/kubernetes/ingress-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-stack-gateway
  namespace: monitoring  
spec:
  gatewayClassName: traefik  
  listeners:
    - name: https
      hostname: aimericsorin.me
      port: 8443         
      protocol: HTTPS
      tls:
        mode: Terminate 
        certificateRefs:
        - kind: Secret
          group: ""
          name: monitoring-stack-cert-prod
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-stack-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-stack-gateway
      namespace: monitoring
  hostnames:
    - aimericsorin.me
  rules:

    # Loki
    - matches:
        - path:
            type: PathPrefix
            value: /loki
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: require-api-key  
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: loki-gateway
          port: 80

    # Tempo Read Path
    - matches:
        - path:
            type: PathPrefix
            value: /tempo-read
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: require-api-key  
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: tempo-query-frontend
          port: 3100

    # Tempo Write Path
    - matches:
        - path:
            type: PathPrefix
            value: /tempo-write
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: require-api-key  
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: tempo-distributor
          port: 3100

    # Prometheus
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: require-api-key  
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: require-api-key
  namespace: monitoring
spec:
  basicAuth:
    secret: basic-auth-secret
